Add POST to select tester (#102)
* rework: Move device selection to body

* rework: Extract candidature

* rework: Prepare for multi candidature

* test: Refactor tests

* rework: Extend types to allow list of selections

* feat: Allow selecting multiple testers

* fix: Check for selection instead of application

* feat: Remove device details

* rework: Improve performance

* rework: Improve performance

* wip: Try removing query

* feat: Remove data from candidature response

* tests: Add tests and remove unused code
